# bank_widget

./: .env.example  README.md  main.py  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
